<resources>
    <string name="app_name">TableMeets</string>
    <string name="username">Usuario</string>
    <string name="new_email">Nuevo email</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="userOrEmail">Usuario o Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="game">Juego</string>
    <string name="location">Lugar</string>
    <string name="name">Nombre</string>
    <string name="our_mission_description_part1">TableMeets nace de la idea de reunir a jugadores apasionados de los juegos de mesa en una plataforma dedicada a la organización de eventos y la conexión entre entusiastas.</string>
    <string name="what_we_offer">¿Qué Ofrecemos?</string>
    <string name="what_we_offer_description_part1">En TableMeets, ofrecemos una plataforma social diseñada específicamente para:</string>
    <string name="what_we_offer_description_part2">- Organizar eventos: Encuentra eventos cercanos o crea los tuyos propios para disfrutar junto a otros jugadores.</string>
    <string name="what_we_offer_description_part3">- Conectar con jugadores: Encuentra personas afines con tus intereses en juegos y haz nuevos amigos.</string>
    <string name="what_we_offer_description_part4">- Experiencias únicas: Disfruta de juegos de mesa en un ambiente amigable y lleno de diversión.</string>
    <string name="join_our_community_title">Únete a la Comunidad\n</string>
    <string name="join_our_community_description_part1">¡Únete a nuestra creciente comunidad de jugadores de mesa!</string>
    <string name="join_our_community_description_part2">Explora, participa en eventos emocionantes y conecta con personas apasionadas como tú.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>